fix desktop overflow (#44)

--- a/front/src/styles/createResearch.scss
+++ b/front/src/styles/createResearch.scss
@@ -37,7 +37,7 @@
 
     .body{
         color: #004AAD;
-        width: 100vw;
+        width: 100%;
         display: flex;
         flex-direction: column;
         background-size: cover;
