--- a/front/src/styles/login.scss
+++ b/front/src/styles/login.scss
@@ -31,7 +31,7 @@
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         background: #f8f9fa;
         min-height: 100vh;
-        width: 100vw;
+        width: 100%;
     }
     .form{
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
